--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,175 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*
+{
+  margin: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navtext{
+  color: white;
+}
+
+nav{
+  display: flex;
+  justify-content:space-evenly;
+  background-color: rgb(51, 51, 192);
+  align-items: center;
+ 
+  height: 50px;
+}
+
+.searchbar{
+ display: flex;
+  align-items: center;
+  background-color: white;
+}
+.searchbar>input{
+  align-items: center;
+  border: none;
+  outline: none;
+  width: 400px;
+  height: 30px;
+}
+
+.backgroundimg{
+  background-image: url("https://wallpaperaccess.com/full/983279.jpg");
+  /* background-color: rgb(129, 7, 58); */
+ /* max-width: 100%;
+ max-height: 100%; */
+ background-size: cover;
+ height: 800px;
+}
+
+.image{
+  /* position: absolute; */
+  display: flex;
+  /* justify-content: center; */
+  margin-left: 0px;
+  
+}
+
+#zoom{
+  box-shadow: 3px 1px 15px 0px rgb(134, 20, 20);
+}
+
+.logo{
+  position: absolute;
+  margin-left:  -1178px;
+}
+
+.image>img{
+  width: 100%;
+  height: 300px;
+}
+/* img:hover{
+  transform:scale(1.2);
+} */
+
+/* div>p{
+  position: absolute;
+  margin-top: 100px;
+  margin-left: 20px;
+  color: rgb(18, 19, 18);
+  font-size: large;
+  border: 2px solid black;
+  background-color: aliceblue;
+  border-radius: 10px;
+} */
+
+.homeimg{
+  display: flex;
+  justify-content: space-evenly;
+ 
+}
+.homedownimg>img{
+  border-radius: 10px;
+
+}
+.homedownimg:hover{
+  transform: scale(1.2);
+}
+
+.homedownimg{
+  border: 2px solid rgb(165, 154, 218);
+  text-align: center;
+  color: yellow;
+  border-radius: 10px;
+  box-shadow: 3px 3px 15px 3px rgb(167, 153, 153);
+}
+
+.mainform{
+margin-left: 500px;
+margin-top: 150px;
+
+}
+.form{
+  background-color: rgb(150, 150, 248);
+  width: 400px;
+  height: 250px;
+  padding-top: 50px;
+  padding-left: 20px;
+  font-size: large;
+  box-shadow: 2px 2px 5px 3px black;
+  border-radius: 7px;
+}
+.form>input{
+  height: 30px;
+  width: 250px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.form>button{
+  height: 25px;
+  width: 90px;
+  /* padding-left: 100px; */
+  margin-left: 140px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.shoppingitem{
+  border: 2px solid rgb(90, 158, 235);
+  text-align: center;
+  width: 200px;
+  box-shadow: 3px 3px 15px 3px rgb(167, 153, 153);
+  border-radius: 6px;
+  background-color: aliceblue;
+  
+
+}
+.shoppingitem:hover{
+  transform: scale(1.2);
+}
+
+.shoppingitem>img{
+  height:200px;
+}
+
+.mainitem{
+  display: grid;
+  /* flex-wrap: wrap; */
+ grid-template-columns: 300px  300px  300px  300px;
+  justify-content: center;
+  row-gap: 50px;
+}
+
+table{
+  border-collapse: collapse;
+  margin-left: 250px;
+  margin-top: 30px;
+  padding: 3px;
+}
+
+.prabhu{
+ font-size: x-large;
+ border: 2px solid rgb(97, 97, 173);
+ width: 500px;
+ margin-left: 400px;
+ margin-top: 100px;
+ box-shadow: 3px 3px 15px 3px rgb(167, 153, 153);
+}
+
+.prabhu:hover{
+  transform: scale(1.2);
 }
